--- a/index.html
+++ b/index.html
@@ -10,49 +10,118 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;0,1000;1,200;1,300&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;0,1000;1,200;1,300&display=swap"
+        rel="stylesheet">
     <!-- My Stylesheet -->
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <!-- Favicon -->
-    <link rel='icon' href='https://shearings.imgix.net/Content/Shearings/images/favicons/apple-touch-icon.png' type='image/x-icon' />
+    <link rel='icon' href='https://shearings.imgix.net/Content/Shearings/images/favicons/apple-touch-icon.png'
+        type='image/x-icon' />
     <title>Shearings | Italian Destinations</title>
 </head>
 
 <body>
 
-    <p class="opening-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore 
-        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute 
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+    <p class="opening-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore
+        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     </p>
 
-
+    <!-- IMAGE Left - Text Right -->
     <article class="article-boxed">
-
         <div class="container-fluid">
             <div class="row">
-              <div class="col-lg">
-                <img src="assets/images/st-peters-cathedral-rome.jpg" alt="St Peter's Cathedral Rome">
-              </div>
-              <div class="col-lg">
-                <h3 class="destination-title destination-title-left">Destination Title</h3>
-              </div>
+                <div class="col-lg">
+                    <img class="img-left" src="assets/images/st-peters-cathedral-rome.jpg"
+                        alt="St Peter's Cathedral Rome">
+                </div>
+                <div class="col-lg">
+                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                </div>
             </div>
-          </div>
-
-
-
-
-
-  
-
-
+        </div>
     </article>
 
-    <article>
-        <h3 class="destination-title destination-title-right">Destination Title</h3>
-
-
+    <!-- IMAGE Right - Text Left -->
+    <article class="article-destination">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                </div>
+                <div class="col-lg">
+                    <img class="img-right" src="assets/images/piazza-de-spagna-spanish-steps.jpg"
+                        alt="Piazza de Spagna Spanish Steps">
+                </div>
+            </div>
+        </div>
     </article>
+
+
+    <!-- IMAGE LEFT - Text Right  -->
+    <article class="article-boxed">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <img class="img-left" src="assets/images/italy-florence-church.jpg" alt="Italy Florence Church">
+                </div>
+                <div class="col-lg">
+                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                </div>
+            </div>
+        </div>
+    </article>
+
+
+    <!-- IMAGE Right - Text Left -->
+    <article class="article-destination">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                </div>
+                <div class="col-lg">
+                    <img class="img-right" src="assets/images/roman-forum-rome-italy.jpg"
+                        alt="Roman Forum Rome Italy">
+                </div>
+            </div>
+        </div>
+    </article>
+
+
+    <!-- IMAGE LEFT - Text Right  -->
+    <article class="article-boxed">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <img class="img-left" src="assets/images/venice-canal.jpg" alt="Venice Canal">
+                </div>
+                <div class="col-lg">
+                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                </div>
+            </div>
+        </div>
+    </article>
+
+
+    <!-- IMAGE Right - Text Left -->
+    <article class="article-destination">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                </div>
+                <div class="col-lg">
+                    <img class="img-right" src="assets/images/st-peters-basilica-vatican-city.jpg"
+                        alt="St Peter's Basilica Vatican City">
+                </div>
+            </div>
+        </div>
+    </article>
+
 
 </body>
 
