Added back to top button and js file, added book tour button and styled both top and book buttons in CSS file.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@
                         alt="St Peter's Cathedral Rome">
                 </div>
                 <div class="col-lg">
-                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                    <h3 class="destination-title">Destination Title</h3>
+                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour</a>
                 </div>
             </div>
         </div>
@@ -50,7 +58,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                    <h3 class="destination-title">Destination Title</h3>
                 </div>
                 <div class="col-lg">
                     <img class="img-right" src="assets/images/piazza-de-spagna-spanish-steps.jpg"
@@ -69,7 +77,7 @@
                     <img class="img-left" src="assets/images/italy-florence-church.jpg" alt="Italy Florence Church">
                 </div>
                 <div class="col-lg">
-                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                    <h3 class="destination-title">Destination Title</h3>
                 </div>
             </div>
         </div>
@@ -81,11 +89,10 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                    <h3 class="destination-title">Destination Title</h3>
                 </div>
                 <div class="col-lg">
-                    <img class="img-right" src="assets/images/roman-forum-rome-italy.jpg"
-                        alt="Roman Forum Rome Italy">
+                    <img class="img-right" src="assets/images/roman-forum-rome-italy.jpg" alt="Roman Forum Rome Italy">
                 </div>
             </div>
         </div>
@@ -100,7 +107,7 @@
                     <img class="img-left" src="assets/images/venice-canal.jpg" alt="Venice Canal">
                 </div>
                 <div class="col-lg">
-                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                    <h3 class="destination-title">Destination Title</h3>
                 </div>
             </div>
         </div>
@@ -112,7 +119,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <h3 class="destination-title destination-title-left">Destination Title</h3>
+                    <h3 class="destination-title">Destination Title</h3>
                 </div>
                 <div class="col-lg">
                     <img class="img-right" src="assets/images/st-peters-basilica-vatican-city.jpg"
@@ -123,6 +130,16 @@
     </article>
 
 
+    <!-- The code here for the back to top button has been taken from Material Design for Bootstrap (MDB) v5 & v4 -->
+    <button type="button" class="btn btn-back-to-top btn-floating btn-lg" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+        <span class="sr-only">Back to the top button</span>
+    </button>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/14fbbe1178.js" crossorigin="anonymous"></script>
+    <!-- Back to top -->
+    <script src="assets/js/top-button.js"></script>
 </body>
 
 </html>
