--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 </head>
 
 <body>
-
     <p class="opening-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
         ut labore et dolore
         magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
         consequat. Duis aute
         irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     </p>
-
+    
     <!-- IMAGE Left - Text Right -->
     <article class="article-boxed">
         <div class="container-fluid">
@@ -47,7 +46,8 @@
                         ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
-                        role="button">Book your tour</a>
+                        role="button">Book your tour
+                    </a>
                 </div>
             </div>
         </div>
@@ -58,16 +58,24 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <h3 class="destination-title">Destination Title</h3>
+                    <h3 class="destination-title">Spanish Steps - Piazza di Spagna - Rome</h3>
+                    <p class="about-destination-text">
+                        The 'Spanish steps' in Rome, built in Rococo style between 1723 and 1726, are the steps that 
+                        lead from the Piazza di Spagna square to the French monastery church Trinita dei Monti (built 
+                        between 1502-1587). There are 135 steps and three different terraces, referring to the Holy 
+                        Trinity (the Trinità). The top of the stairs near the Egyptian obelisk offers a beautiful view. 
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
                 </div>
                 <div class="col-lg">
-                    <img class="img-right" src="assets/images/piazza-de-spagna-spanish-steps.jpg"
-                        alt="Piazza de Spagna Spanish Steps">
+                    <img class="img-right" src="assets/images/piazza-di-spagna-spanish-steps.jpg"
+                        alt="Piazza di Spagna Spanish Steps">
                 </div>
             </div>
         </div>
     </article>
-
 
     <!-- IMAGE LEFT - Text Right  -->
     <article class="article-boxed">
@@ -78,11 +86,19 @@
                 </div>
                 <div class="col-lg">
                     <h3 class="destination-title">Destination Title</h3>
+                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
                 </div>
             </div>
         </div>
     </article>
-
 
     <!-- IMAGE Right - Text Left -->
     <article class="article-destination">
@@ -90,6 +106,15 @@
             <div class="row">
                 <div class="col-lg">
                     <h3 class="destination-title">Destination Title</h3>
+                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
                 </div>
                 <div class="col-lg">
                     <img class="img-right" src="assets/images/roman-forum-rome-italy.jpg" alt="Roman Forum Rome Italy">
@@ -97,7 +122,6 @@
             </div>
         </div>
     </article>
-
 
     <!-- IMAGE LEFT - Text Right  -->
     <article class="article-boxed">
@@ -108,11 +132,19 @@
                 </div>
                 <div class="col-lg">
                     <h3 class="destination-title">Destination Title</h3>
+                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
                 </div>
             </div>
         </div>
     </article>
-
 
     <!-- IMAGE Right - Text Left -->
     <article class="article-destination">
@@ -120,6 +152,15 @@
             <div class="row">
                 <div class="col-lg">
                     <h3 class="destination-title">Destination Title</h3>
+                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                        eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                        aliquip
+                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
                 </div>
                 <div class="col-lg">
                     <img class="img-right" src="assets/images/st-peters-basilica-vatican-city.jpg"
@@ -128,8 +169,6 @@
             </div>
         </div>
     </article>
-
-
     <!-- The code here for the back to top button has been taken from Material Design for Bootstrap (MDB) v5 & v4 -->
     <button type="button" class="btn btn-back-to-top btn-floating btn-lg" id="btn-back-to-top">
         <i class="fas fa-arrow-up"></i>
