Adding media queries to elements so these display correctly on the devices I am using to test them on.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
-                    <h3 class="destination-title">Spanish Steps - Piazza di Spagna - Rome</h3>
+                    <h3 class="destination-title">Spanish Steps - Piazza di Spagna</h3>
                     <p class="about-destination-text">
                         The 'Spanish steps' in Rome, built in Rococo style between 1723 and 1726, are the steps that 
                         lead from the Piazza di Spagna square to the French monastery church Trinita dei Monti (built 
