--- a/index.html
+++ b/index.html
@@ -38,12 +38,107 @@
                         alt="St Peter's Cathedral Rome">
                 </div>
                 <div class="col-lg">
-                    <h3 class="destination-title">Destination Title</h3>
-                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    <h3 class="destination-title">St. Peter's Basilica</h3>
+                    <p class="about-destination-text">
+                        St. Peter's Basilica is one of the holiest temples for Christendom and the largest churches 
+                        in the world. Inside, visitors will find extremely impressive pieces of art one being St 
+                        Peter who has his right foot worn down due to the touches of the devoted. Visitors can climb 
+                        to the top of the dome, where a stunning view of St Peter's Square and most of the city 
+                        awaits them.
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
+                </div>
+            </div>
+        </div>
+    </article>
+
+       <!-- IMAGE Right - Text Left -->
+       <article class="article-destination">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <h3 class="destination-title">Vatican City</h3>
+                    <p class="about-destination-text">
+                        Vatican City (Città del Vaticano in Italian) is an independent city state in the heart of Rome,
+                        ruled by the Pope. Within the Vatican there are numerous interesting attractions to visit, the 
+                        best are the following: St. Peter's Square (Piazza San Pietro), St. Peter's Basilica and Vatican 
+                        Museums, where the Sistine chapel is located. We recommend at least a whole morning for this tour.
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
+                </div>
+                <div class="col-lg">
+                    <img class="img-right" src="assets/images/st-peters-basilica-vatican-city.jpg"
+                        alt="St Peter's Basilica Vatican City">
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <!-- IMAGE LEFT - Text Right  -->
+    <article class="article-boxed">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <img class="img-left" src="assets/images/italy-florence-church.jpg" alt="Italy Florence Church">
+                </div>
+                <div class="col-lg">
+                    <h3 class="destination-title">Florence</h3>
+                    <p class="about-destination-text">
+                        Florence's historical centre is small and thus perfect for exploring on foot! Traveling on foot 
+                        provides for a pace that opens your eyes to various hidden treasures. There is plenty to see and 
+                        do in Florence such as: Michelangelo's David, Ponte Vecchio Bridge spanning the narrowest point 
+                        of the Arno River and has shops on, to the Santa Maria del Fiore (Florence cathedral).
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <!-- IMAGE Right - Text Left -->
+    <article class="article-destination">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <h3 class="destination-title">Roman Forum</h3>
+                    <p class="about-destination-text">
+                        Located between Piazza Venezia and the Colosseum, the Roman Forum was the hub of political and 
+                        social activity of the Roman citizens. Some points of interest are: Basilica of Maxentius and 
+                        Constantine, The Curia, Arch of Titus and the Temple of Antoninus and Faustina. If you prefer 
+                        to take a tour on your own we recommend that you head there first thing in the morning. 
+                    </p>
+                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
+                        role="button">Book your tour
+                    </a>
+                </div>
+                <div class="col-lg">
+                    <img class="img-right" src="assets/images/roman-forum-rome-italy.jpg" alt="Roman Forum Rome Italy">
+                </div>
+            </div>
+        </div>
+    </article>
+
+    <!-- IMAGE LEFT - Text Right  -->
+    <article class="article-boxed">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg">
+                    <img class="img-left" src="assets/images/venice-canal.jpg" alt="Venice Canal">
+                </div>
+                <div class="col-lg">
+                    <h3 class="destination-title">The Canals of Venice</h3>
+                    <p class="about-destination-text">
+                        Thanks to its canals, Venice is known to be one of the most magical places on earth. The 
+                        city is a testament to the ingenuity of the human spirit and man-made invention. There are 
+                        plenty of famous landmarks to feast your eyes on in Venice, but its canals are rightfully 
+                        considered to be one of the world's top attractions. The gondolas are the most iconic boats 
+                        in Venice.
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
                         role="button">Book your tour
@@ -76,99 +171,7 @@
             </div>
         </div>
     </article>
-
-    <!-- IMAGE LEFT - Text Right  -->
-    <article class="article-boxed">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg">
-                    <img class="img-left" src="assets/images/italy-florence-church.jpg" alt="Italy Florence Church">
-                </div>
-                <div class="col-lg">
-                    <h3 class="destination-title">Destination Title</h3>
-                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    </p>
-                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
-                        role="button">Book your tour
-                    </a>
-                </div>
-            </div>
-        </div>
-    </article>
-
-    <!-- IMAGE Right - Text Left -->
-    <article class="article-destination">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg">
-                    <h3 class="destination-title">Destination Title</h3>
-                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    </p>
-                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
-                        role="button">Book your tour
-                    </a>
-                </div>
-                <div class="col-lg">
-                    <img class="img-right" src="assets/images/roman-forum-rome-italy.jpg" alt="Roman Forum Rome Italy">
-                </div>
-            </div>
-        </div>
-    </article>
-
-    <!-- IMAGE LEFT - Text Right  -->
-    <article class="article-boxed">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg">
-                    <img class="img-left" src="assets/images/venice-canal.jpg" alt="Venice Canal">
-                </div>
-                <div class="col-lg">
-                    <h3 class="destination-title">Destination Title</h3>
-                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    </p>
-                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
-                        role="button">Book your tour
-                    </a>
-                </div>
-            </div>
-        </div>
-    </article>
-
-    <!-- IMAGE Right - Text Left -->
-    <article class="article-destination">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg">
-                    <h3 class="destination-title">Destination Title</h3>
-                    <p class="about-destination-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-                        eiusmod tempor incididunt ut labore et
-                        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                        aliquip
-                        ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    </p>
-                    <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
-                        role="button">Book your tour
-                    </a>
-                </div>
-                <div class="col-lg">
-                    <img class="img-right" src="assets/images/st-peters-basilica-vatican-city.jpg"
-                        alt="St Peter's Basilica Vatican City">
-                </div>
-            </div>
-        </div>
-    </article>
+ 
     <!-- The code here for the back to top button has been taken from Material Design for Bootstrap (MDB) v5 & v4 -->
     <button type="button" class="btn btn-back-to-top btn-floating btn-lg" id="btn-back-to-top">
         <i class="fas fa-arrow-up"></i>
