--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         consequat. Duis aute
         irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
     </p>
-    
+
     <!-- IMAGE Left - Text Right -->
     <article class="article-boxed">
         <div class="container-fluid">
@@ -40,10 +40,10 @@
                 <div class="col-lg">
                     <h3 class="destination-title">St. Peter's Basilica</h3>
                     <p class="about-destination-text">
-                        St. Peter's Basilica is one of the holiest temples for Christendom and the largest churches 
-                        in the world. Inside, visitors will find extremely impressive pieces of art one being St 
-                        Peter who has his right foot worn down due to the touches of the devoted. Visitors can climb 
-                        to the top of the dome, where a stunning view of St Peter's Square and most of the city 
+                        St. Peter's Basilica is one of the holiest temples for Christendom and the largest churches
+                        in the world. Inside, visitors will find extremely impressive pieces of art one being St
+                        Peter who has his right foot worn down due to the touches of the devoted. Visitors can climb
+                        to the top of the dome, where a stunning view of St Peter's Square and most of the city
                         awaits them.
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
@@ -54,17 +54,18 @@
         </div>
     </article>
 
-       <!-- IMAGE Right - Text Left -->
-       <article class="article-destination">
+    <!-- IMAGE Right - Text Left -->
+    <article class="article-destination">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg">
                     <h3 class="destination-title">Vatican City</h3>
                     <p class="about-destination-text">
                         Vatican City (Città del Vaticano in Italian) is an independent city state in the heart of Rome,
-                        ruled by the Pope. Within the Vatican there are numerous interesting attractions to visit, the 
-                        best are the following: St. Peter's Square (Piazza San Pietro), St. Peter's Basilica and Vatican 
-                        Museums, where the Sistine chapel is located. We recommend at least a whole morning for this tour.
+                        ruled by the Pope. Within the Vatican there are numerous interesting attractions to visit, the
+                        best are the following: St. Peter's Square (Piazza San Pietro), St. Peter's Basilica and Vatican
+                        Museums, where the Sistine chapel is located. We recommend at least a whole morning for this
+                        tour.
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
                         role="button">Book your tour
@@ -88,9 +89,9 @@
                 <div class="col-lg">
                     <h3 class="destination-title">Florence</h3>
                     <p class="about-destination-text">
-                        Florence's historical centre is small and thus perfect for exploring on foot! Traveling on foot 
-                        provides for a pace that opens your eyes to various hidden treasures. There is plenty to see and 
-                        do in Florence such as: Michelangelo's David, Ponte Vecchio Bridge spanning the narrowest point 
+                        Florence's historical centre is small and thus perfect for exploring on foot! Traveling on foot
+                        provides for a pace that opens your eyes to various hidden treasures. There is plenty to see and
+                        do in Florence such as: Michelangelo's David, Ponte Vecchio Bridge spanning the narrowest point
                         of the Arno River and has shops on, to the Santa Maria del Fiore (Florence cathedral).
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
@@ -108,10 +109,10 @@
                 <div class="col-lg">
                     <h3 class="destination-title">Roman Forum</h3>
                     <p class="about-destination-text">
-                        Located between Piazza Venezia and the Colosseum, the Roman Forum was the hub of political and 
-                        social activity of the Roman citizens. Some points of interest are: Basilica of Maxentius and 
-                        Constantine, The Curia, Arch of Titus and the Temple of Antoninus and Faustina. If you prefer 
-                        to take a tour on your own we recommend that you head there first thing in the morning. 
+                        Located between Piazza Venezia and the Colosseum, the Roman Forum was the hub of political and
+                        social activity of the Roman citizens. Some points of interest are: Basilica of Maxentius and
+                        Constantine, The Curia, Arch of Titus and the Temple of Antoninus and Faustina. If you prefer
+                        to take a tour on your own we recommend that you head there first thing in the morning.
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
                         role="button">Book your tour
@@ -134,10 +135,10 @@
                 <div class="col-lg">
                     <h3 class="destination-title">The Canals of Venice</h3>
                     <p class="about-destination-text">
-                        Thanks to its canals, Venice is known to be one of the most magical places on earth. The 
-                        city is a testament to the ingenuity of the human spirit and man-made invention. There are 
-                        plenty of famous landmarks to feast your eyes on in Venice, but its canals are rightfully 
-                        considered to be one of the world's top attractions. The gondolas are the most iconic boats 
+                        Thanks to its canals, Venice is known to be one of the most magical places on earth. The
+                        city is a testament to the ingenuity of the human spirit and man-made invention. There are
+                        plenty of famous landmarks to feast your eyes on in Venice, but its canals are rightfully
+                        considered to be one of the world's top attractions. The gondolas are the most iconic boats
                         in Venice.
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
@@ -155,10 +156,10 @@
                 <div class="col-lg">
                     <h3 class="destination-title">Spanish Steps - Piazza di Spagna</h3>
                     <p class="about-destination-text">
-                        The 'Spanish steps' in Rome, built in Rococo style between 1723 and 1726, are the steps that 
-                        lead from the Piazza di Spagna square to the French monastery church Trinita dei Monti (built 
-                        between 1502-1587). There are 135 steps and three different terraces, referring to the Holy 
-                        Trinity (the Trinità). The top of the stairs near the Egyptian obelisk offers a beautiful view. 
+                        The 'Spanish steps' in Rome, built in Rococo style between 1723 and 1726, are the steps that
+                        lead from the Piazza di Spagna square to the French monastery church Trinita dei Monti (built
+                        between 1502-1587). There are 135 steps and three different terraces, referring to the Holy
+                        Trinity (the Trinità). The top of the stairs near the Egyptian obelisk offers a beautiful view.
                     </p>
                     <a class="btn btn-book-tour" href="https://www.shearings.com/coach-holidays/italy" target="_blank"
                         role="button">Book your tour
@@ -171,7 +172,7 @@
             </div>
         </div>
     </article>
- 
+
     <!-- The code here for the back to top button has been taken from Material Design for Bootstrap (MDB) v5 & v4 -->
     <button type="button" class="btn btn-back-to-top btn-floating btn-lg" id="btn-back-to-top">
         <i class="fas fa-arrow-up"></i>
